--- a/css/styles.css
+++ b/css/styles.css
@@ -69,19 +69,23 @@ h1 {
 header h1 {
     display: inline-block;
 }
-.botones button {
+.botones button, .botones a {
     margin-top: 1.5rem;
     padding: 1rem;
     border: none;
-    background: rgb(28, 66, 163);
+    background: #1c42a3;
     border-radius: 10px;
     color: rgb(255, 255, 255, .7);
     cursor: pointer;
     transition: .3s;
+    text-decoration: none;
 }
-.botones button:hover {
+.botones button:hover, .botones a:hover {
     background: rgb(53, 129, 227);
     color: #fff;
+}
+.disabled {
+    display: none!important;
 }
 @media (max-width: 750px) {
     header {
@@ -91,7 +95,7 @@ header h1 {
         display: block;
         margin-bottom: 1rem;
     }
-    .botones button {
+    .botones button, .botones a {
         display: block;
         margin: .25rem 0;
         width: 100%;
