--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,15 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+h1 {
+    font-family: 'Nautilus Pompilius', sans-serif;
+    font-size: 2.5rem;
+    color: #2a42b3!important;
+}
+.header > h1 {
+    font-size: 2rem;
+    line-height: 1.5;
+}
 .contenedor {
     margin: 0 auto;
     width: 90%;
@@ -20,7 +29,7 @@ ul#datos {
 li {
     list-style: none;
     padding: 0 2rem;
-    background-color: #acacac;
+    background-color: #d5d5d5;
     margin: 1.5rem 0;
     padding: 2rem;
     border-radius: 5px;
@@ -36,19 +45,19 @@ li {
     cursor: pointer;
 }
 .delete {
-    color: rgba(122, 18, 49, 0.7);
+    color: rgba(229, 10, 10, .7);
     margin-right: .5rem;
     transition: .3s;
 }
 .delete:hover {
-    color: rgb(122, 18, 49);
+    color: rgba(229, 10, 10, 1);
 }
 .edit {
-    color: rgba(196, 145, 7, 0.7);
+    color: rgba(255, 174, 0, 0.7);
     transition: .3s;
 }
 .edit:hover {
-    color: rgba(196, 145, 7, 1);
+    color: rgba(255, 174, 0, 1);
 }
 h1 {
     text-align: center;
@@ -83,6 +92,9 @@ header h1 {
 .botones button:hover, .botones a:hover {
     background: rgb(53, 129, 227);
     color: #fff;
+}
+#boton-logout {
+    margin-right: .25rem;
 }
 .disabled {
     display: none!important;
